fixed spacing

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1020,7 +1020,7 @@ a {
 
 .icon-col-heading {
   font-size: 0.95rem;
-  margin-bottom: -0.3rem !important;
+  margin-bottom: -0.5rem !important;
   line-height: 1.1;
 }
 
